fix: issue with varying width of accordions when collapsed, check for resource type

--- a/AMW_angular/io/src/app/resources/resource-edit/resource-edit.component.scss
+++ b/AMW_angular/io/src/app/resources/resource-edit/resource-edit.component.scss
@@ -7,3 +7,7 @@ app-button.dropdown-toggle:after {
   align-items: center;
   gap: 1rem;
 }
+
+.flex-1 {
+  flex: 1
+}
